--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -39,39 +39,35 @@
 <HyperTensionPage>:
     BoxLayout:
         orientation: 'vertical'
+
         MyActionBar:
             title:hypertension_toolbar_title
-
-
-        Label:
-            text:'Have you ever been told by a doctor or other health professional that you had hypertension, also called high blood pressure?'
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.9
-            size_hint_y:0.6
-
-
         BoxLayout:
-            orientation:'horizontal'
+            size_hint_y:0.6
+            orientation:'vertical'
+            pos_hint:{'center_x':0.5}
 
-            Widget:
-                size_hint_x:0.2
-            Button:
-                text:'Yes'
-                size_hint_x:1
-                on_release: root.button_press(0)
-            Widget:
-                size_hint_x:0.1
+            Label:
+                size_hint_x:0.8
+                id:label1
+                text_size: root.width*self.size_hint_x, None
+                size: self.texture_size
+                color: TXT_COLOR
+                text:"Have you ever been told by a doctor or other health professional that you had hypertension, also called high blood pressure?"
+                halign:'center'
+                pos_hint:{'center_x':0.5}
 
-            Button:
-                text:'No'
-                size_hint_x:1
-                on_release: root.button_press(1)
-            Widget:
-                size_hint_x:0.2
+        MyButton2:
+            id:Yes
+            text:"Yes"
+            on_release: root.toggle(self)
 
+        MyButton2:
+            id:No
+            text:"No"
+            on_release: root.toggle(self)
 
-        NavButtons
-
+        NavButtons:
 
 <HyperTensionScorePage>:
     score_label:score_label
@@ -79,7 +75,7 @@
         orientation: 'vertical'
 
         MyActionBar:
-            title:physical_toolbar_title
+            title:hypertension_toolbar_title
 
         BoxLayout:
             orientation:'vertical'
